--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,17 @@
 {
 	"name": "全角半角変換",
 	"description": "formのcontext menuに「全角へ変換する」、「半角へ変換する」を追加します",
-	"manifest_version": 2,
-	"version": "0.2",
+	"manifest_version": 3,
+	"version": "0.3",
 	"background" : {
-		"scripts" : ["/js/background.js"],
-		"persistent" : false
+		"service_worker" : "./js/background.js"
 	},
 	"permissions": [
-		"<all_urls>",
 		"contextMenus",
-		"tabs"
+		"scripting"
+	],
+	"host_permissions": [
+		"<all_urls>"
 	],
 	"icons": {
 		"48": "/img/icon48.png"
